# cellcraft

./: CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.claude/commands/: implement-milestone.md
cellcraft/: __init__.py  canvas.py  errors.py  io.py  pattern.py  render.py  scene.py  types.py
docs/design/: 0_design_spec.md  1_implementation_plan.md
docs/notes/: session.md
examples/: example_01_patterns.py  example_02_canvas_render.py  example_03_scene_1024x768.py  example_04_export_sequence.py  scratch.py
tests/: test_canvas.py  test_integration_examples.py  test_pattern_ops.py  test_pattern_parse.py  test_renderer.py  test_scene.py
tests/golden/: README.md
